[fix] remove chrome scrollbar

--- a/src/components/Dishes/AvailableDishes.module.css
+++ b/src/components/Dishes/AvailableDishes.module.css
@@ -1,7 +1,3 @@
-.bg {
-  background-image: url("../../../assets/bg.jpg");
-}
-
 .noscroll::-webkit-scrollbar {
   display: none;
 }
